# socket-chat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  client.c  server.c
include/: client.h  network.h  os_networking.h  poll_list.h  server.h  socket_commands.h
include/containers/: poll_list.h  sockbuf_list.h  socket_buffer.h  stdin_queue.h  test_message.h  text_message.h  thread_queue.h
include/events/: client_events.h  data_operations.h  data_pipes.h  server_events.h
include/networking/: data_pipes.h  event_handlers.h  os_networking.h  socket_commands.h
include/utils/: logging.h  poll_list.h  sockbuf_list.h  socket_buffer.h  socket_commands.h  stdin_thread.h
src/: client.c  main.c  network.c  poll_list.c  server.c  server_start.c  socket_commands.c
src/containers/: poll_list.c  sockbuf_list.c  socket_buffer.c  text_message.c  thread_queue.c
src/events/: client_events.c  data_operations.c  data_pipes.c  server_events.c
src/networking/: data_pipes.c  event_handlers.c  socket_commands.c
src/utils/: logging.c  poll_list.c  sockbuf_list.c  socket_buffer.c  socket_commands.c  stdin_thread.c
